[tool.poetry]
name = "polar-planeten"
version = "0.1.0"
description = ""
authors = ["Jørgen Johansen <joergen@zarqul.no>", "Karl Fredrik Haugland <kfh@tla.wtf>"]

[tool.poetry.dependencies]
python = ">=3.10,<4"
Django = "^4.2"
django-environ = "^0.10.0"
whitenoise = "^6.4.0"
psycopg2-binary = "^2.9.6"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pylint = "^2.12"
flake8 = "^4.0"
mypy = "^0.910"
black = "^22.8.0"

[tool.black]
target_version = ['py310']
include = '\.pyi?$'
safe = true
exclude = '''
/(
    \.git
  | __pycache__
  | migrations
  | \.venv
)/
'''

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
group_by_package = true
skip_glob = "*migrations*"
known_django = "django"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.mypy]
ignore_missing_imports = true
